Made logo clickable by fixing its z-index postion and made slider text on mobile homepage bigger

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -34,6 +34,8 @@ header {
 
 .logo {
     width: 100%;
+    position: relative;
+    z-index: 100;
     
     @media (max-width: 1000px) {
         margin: 15px auto 10px;
