--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -79,15 +79,17 @@
     position: absolute;
     right: 0;
     top: -4px;
+    
     @media (max-width: 1000px) {
         top: -4px;
     }
     @media (max-width: 768px) {
-        font-size: 1.5rem;
+        font-size: 2rem;
         top: auto;
         bottom: -25px;
         width: 100%;
-        background: none repeat scroll 0 0 rgba(255, 255, 255, 1);
+        padding: 10px;
+        background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
     }
 }
 
